UPDATE: Edit user endpoint and its test
